welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: value !== is not a member of java.awt.Color
	if (getCouleurSol() !== Color.green) {
                            ^